--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,43 @@
     border: solid white 3px;
     border-radius: 15px;
   }
+
+  .fadeIn {
+    animation-duration: 0.5s;
+    animation-name: fadein;
+  }
+
+  .fadeOut {
+    animation-duration: 0.5s;
+    animation-name: fadeout;
+  }
+
+  @keyframes fadein {
+    from {
+      display: none;
+      opacity: 0;
+    }
+
+    1% {
+      display: block;
+      opacity: 0;
+    }
+  
+    to {
+      display: block; 
+      opacity: 1;
+    }
+  }
+
+  @keyframes fadeout {
+    from {
+      display: block;
+      opacity: 1;
+    }
+  
+    to {
+      display: none; 
+      opacity: 0;
+    }
+  }
 }
